--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,13 @@
 default-features = false
 version = "0.3.0-alpha.13"
 
+[dependencies.thespis_derive]
+optional = true
+path = "../thespis_derive"
+
 [features]
 default = ["std"]
+derive = ["thespis_derive"]
 std = ["futures-preview/std"]
 
 [package]
