--- a/Cargo.yml
+++ b/Cargo.yml
@@ -9,7 +9,9 @@ features:
 
   default: [ std ]
   std    : [ futures-preview/std ]
+  derive : [ thespis_derive      ]
 
 dependencies:
 
   futures-preview: { version: 0.3.0-alpha.13, default-features: false }
+  thespis_derive : { path: ../thespis_derive, optional        : true  }
