--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 [dependencies]
 [dependencies.futures-preview]
 default-features = false
-version = "0.3.0-alpha.13"
+features = ["nightly"]
+path = "../../futures-rs/futures"
 
 [dependencies.thespis_derive]
 optional = true
