--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 # Auto-generated from "Cargo.yml"
 [dependencies]
+failure = "^0.1"
+
 [dependencies.futures-preview]
 default-features = false
 features = ["nightly"]
@@ -10,7 +12,7 @@ optional = true
 path = "../thespis_derive"
 
 [features]
-default = ["std"]
+default = ["std", "derive"]
 derive = ["thespis_derive"]
 std = ["futures-preview/std"]
 
