--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,18 +2,36 @@
 [dependencies]
 failure = "^0.1"
 
+[dependencies.bytes]
+optional = true
+version = "^0.4"
+
 [dependencies.futures-preview]
 default-features = false
 features = ["nightly"]
 path = "../../futures-rs/futures"
+
+[dependencies.num-derive]
+optional = true
+version = "^0.2"
+
+[dependencies.num-traits]
+optional = true
+version = "^0.2"
+
+[dependencies.serde]
+default-features = false
+optional = true
+version = "^1"
 
 [dependencies.thespis_derive]
 optional = true
 path = "../thespis_derive"
 
 [features]
-default = ["std", "derive"]
+default = ["std", "derive", "remote"]
 derive = ["thespis_derive"]
+remote = ["serde", "bytes", "num-traits", "num-derive"]
 std = ["futures-preview/std"]
 
 [package]
