--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ version = "^0.4"
 [dependencies.futures-preview]
 default-features = false
 features = ["nightly"]
-path = "../../futures-rs/futures"
+version = "^0.3.0-alpha.14"
 
 [dependencies.num-derive]
 optional = true
