--- a/Cargo.yml
+++ b/Cargo.yml
@@ -14,7 +14,7 @@ features:
 
 dependencies:
 
-  futures-preview: { path: ../../futures-rs/futures, features: [ nightly ], default-features: false }
+  futures-preview: { version: ^0.3.0-alpha.14, features: [ nightly ], default-features: false }
   thespis_derive : { path: ../thespis_derive, optional: true  }
   failure        : ^0.1
   serde          : { version: ^1  , optional: true, default-features: false }
