--- a/Cargo.yml
+++ b/Cargo.yml
@@ -20,7 +20,7 @@ dependencies:
   serde          : { version: ^1  , optional: true, default-features: false }
   bytes          : { version: ^0.4, optional: true                          }
 
-  # do we still want these?
+  # TODO: do we still want these?
   #
   num-traits     : { version: ^0.2,                          optional: true }
   num-derive     : { version: ^0.2,                          optional: true }
