--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,7 @@
 # Auto-generated from "Cargo.yml"
 [dependencies]
+failure = "^0.1"
+
 [dependencies.futures-preview]
 default-features = false
 features = ["nightly"]
