--- a/Cargo.yml
+++ b/Cargo.yml
@@ -15,5 +15,5 @@ dependencies:
 
   futures-preview: { version: ^0.3.0-alpha.15, features: [ nightly ], default-features: false }
   thespis_derive : { path: ../thespis_derive, optional: true  }
-  # failure        : ^0.1
+  failure        : ^0.1
 
