Allow BoxAddress to have custom lifetime.

--- a/Cargo.yml
+++ b/Cargo.yml
@@ -48,6 +48,8 @@ features:
 
 dependencies:
 
+  # TODO: individual futures crates.
+  #
   futures        : { version: ^0.3, default-features: false }
   thespis_derive : { path: ../thespis_derive, optional: true }
 
