--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,9 @@ status = "actively-developed"
 repository = "thespis-rs/thespis_iface"
 
 [dependencies]
-[dependencies.futures]
+[dependencies.futures-sink]
 default-features = false
+features = ["std"]
 version = "^0.3"
 
 [dependencies.thespis_derive]
@@ -16,10 +17,9 @@ optional = true
 path = "../thespis_derive"
 
 [features]
-default = ["std", "derive"]
+default = ["derive"]
 derive = ["thespis_derive"]
 external_doc = []
-std = ["futures/std"]
 
 [package]
 authors = ["Naja Melan <najamelan@autistici.org>"]
