Modernize our way of importing readme in the docs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ status = "actively-developed"
 [badges.travis-ci]
 repository = "thespis-rs/thespis_iface"
 
+[build-dependencies]
+rustc_version = "^0.2"
+
 [dependencies]
 [dependencies.futures-sink]
 default-features = false
