--- a/Cargo.yml
+++ b/Cargo.yml
@@ -62,7 +62,7 @@ features:
 dependencies:
 
   futures-sink   : { version: ^0.3, features: [std], default-features: false }
-  thespis_derive : { path: ../thespis_derive, optional: true }
+  thespis_derive : { version: 0.1.0-alpha, optional: true }
 
 
 build-dependencies:
