--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ status = "actively-developed"
 repository = "thespis-rs/thespis_iface"
 
 [build-dependencies]
-rustc_version = "^0.2"
+rustc_version = "^0.3"
 
 [dependencies]
 [dependencies.futures-sink]
@@ -26,7 +26,7 @@ external_doc = []
 
 [package]
 authors = ["Naja Melan <najamelan@autistici.org>"]
-categories = ["Asynchronous", "Concurrency"]
+categories = ["asynchronous", "concurrency"]
 description = "The interface of the thespis actor model (contains only traits)."
 documentation = "https://docs.rs/thespis"
 edition = "2018"
@@ -36,7 +36,7 @@ license = "Unlicense"
 name = "thespis"
 readme = "README.md"
 repository = "https://github.com/thespis-rs/thespis_iface"
-version = "0.1.0-alpha.2"
+version = "0.1.0-alpha.3"
 
 [package.metadata]
 [package.metadata.docs]
