--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,7 @@ license = "Unlicense"
 name = "thespis"
 readme = "README.md"
 repository = "https://github.com/thespis-rs/thespis_iface"
+resolver = "2"
 version = "0.1.0"
 
 [package.metadata]
