--- a/Cargo.yml
+++ b/Cargo.yml
@@ -11,7 +11,8 @@ package:
   #
   # - `cargo clippy --tests --examples --benches --all-features`
   # - `cargo update`
-  # - `cargo udeps --all-targets --all-features`
+  # - `cargo outdated --root-deps-only`
+  # - `cargo +nightly udeps --all-targets --all-features`
   # - `cargo audit`
   # - `cargo crev crate verify --show-all --recursive` and review.
   # - 'cargo test --all-targets --all-features'
